# eopf-101

./: .gitignore  .nojekyll  03_eopf_stac_conection.ipynb  03_eopf_stac_xarray_tutorial.ipynb  03_eopf_stac_zarr_tutorial.qmd  03_stac_intro.qmd  11_about_eopf.html  11_about_eopf.qmd  12_about_cloudoptimized_formats.html  12_about_cloudoptimized_formats.qmd  13_overview_eopf_datasets.html  13_overview_eopf_datasets.qmd  1_about_cloudoptimized_formats.html  1_about_cloudoptimized_formats.qmd  1_about_eopf.html  1_about_eopf.qmd  1_overview_eopf_datasets.html  1_overview_eopf_datasets.qmd  21_what_is_zarr.html  21_what_is_zarr.qmd  22_zarr_struct_S1.ipynb  22_zarr_struct_S2L2A.html  22_zarr_struct_S2L2A.ipynb  22_zarr_structure_S1GRD.html  22_zarr_structure_S1GRD.ipynb  23_S1_basic_operations.html  23_S1_basic_operations.ipynb  23_eopf_size_comp_tutorial.ipynb  23_zarr_structure_S1GRD.ipynb  24_S1_basic_operations.ipynb  24_zarr_struct_S2L2A.html  24_zarr_struct_S2L2A.ipynb  24_zarr_struct_S3.ipynb  251_zarr_chunking_intro.qmd  252_zarr_chunking_strat.qmd  253_zarr_chunking_practical.ipynb  25_S1_GTC_RTC.ipynb  25_zarr_chunking.qmd  25_zarr_struct_S3.html  25_zarr_struct_S3.ipynb  (+76 more)
.github/scripts/: make_quarto_ci_profile.sh
.github/workflows/: build-and-update-notebook-image.yml  clean-harbor.py  clean-harbor.yml  delete-old-image-tags.yml  nightly-render-check.yml  nightly_render_alert.py  publish.yml  test.yml  validate_notebooks.py
.ipynb_checkpoints/: 1_about_eopf-checkpoint.qmd
01_about_eopf/: 11_about_eopf.html  11_about_eopf.qmd  12_about_cloudoptimized_formats.html  12_about_cloudoptimized_formats.qmd  13_overview_eopf_datasets.html  13_overview_eopf_datasets.qmd
02_about_eopf_zarr/: 21_what_is_zarr.html  21_what_is_zarr.qmd  22_zarr_structure_S1GRD.html  22_zarr_structure_S1GRD.ipynb  23_S1_basic_operations.html  23_S1_basic_operations.ipynb  24_zarr_struct_S2L2A.html  24_zarr_struct_S2L2A.ipynb  25_zarr_struct_S3.html  25_zarr_struct_S3.ipynb
03_about_chunking/: 31_zarr_chunking_intro.html  31_zarr_chunking_intro.qmd  32_zarr_chunking_strat.html  32_zarr_chunking_strat.qmd
04_eopf_and_stac/: 41_stac_intro.html  41_stac_intro.qmd  42_eopf_stac_zarr_tutorial.html  42_eopf_stac_zarr_tutorial.qmd  43_eopf_stac_connection.html  43_eopf_stac_connection.ipynb  44_eopf_stac_xarray_tutorial.html  44_eopf_stac_xarray_tutorial.ipynb
05_zarr_tools/: 51_eopf_stac_r.html  51_eopf_stac_r.ipynb  51_eopf_stac_r.qmd  52_eopf_stac_qgis.html  52_eopf_stac_qgis.qmd  53_eopf_zarr_r.html  53_eopf_zarr_r.ipynb  53_eopf_zarr_r.qmd  54_eopf_zarr_r_examples.html  54_eopf_zarr_r_examples.ipynb  54_eopf_zarr_r_examples.qmd  54_zarr_R_rarr.qmd  55_safe_vs_zarr.qmd  57_rstac_gdalcubes.html  57_rstac_gdalcubes.ipynb  57_rstac_gdalcubes.qmd  57_zarr_R_gdal.qmd  58_safe_vs_zarr.qmd  58_safe_vs_zarr_original.qmd  5x_safe_vs_zarr.qmd  5x_safe_vs_zarr_original.qmd
06_eopf_zarr_in_action/: 610_s2_s3_fusion.html  610_s2_s3_fusion.ipynb  61_sardinia_s2_tfci.html  61_sardinia_s2_tfci.ipynb  62_sardinia_s3_lst.html  62_sardinia_s3_lst.ipynb  63_sardinia_dNBR.html  63_sardinia_dNBR.ipynb  64_flood_mapping_valencia.html  64_flood_mapping_valencia.ipynb  65_coastal_water_dynamics_s1.ipynb  65_create_overviews.html  65_create_overviews.ipynb  65_reservoir_surface_monitoring.html  65_reservoir_surface_monitoring.ipynb  65_vegetation_anomalies.ipynb  66_s2_s3_fusion.ipynb  66_use_overviews.html  66_use_overviews.ipynb  67_reservoir_surface_monitoring.html  67_reservoir_surface_monitoring.ipynb  68_vegetation_anomalies.html  68_vegetation_anomalies.ipynb  69_coastal_water_dynamics_s1.ipynb  eopf_toolkit_zarr_items.json  ipyleaflet_multiscales.py  items_search.ipynb  reservoir_surface_monitoring_utils.py  writing_overviews.py  zarr_efast_utils.py  zarr_s1_utils.py  zarr_wf_utils.py
06_eopf_zarr_in_action/.ipynb_checkpoints/: 65_vegetation_anomalies-checkpoint.ipynb  68_vegetation_anomalies-checkpoint.ipynb
06_eopf_zarr_in_action/data/: water_occurrence_utm35_v14.tif
data/: water_occurrence_utm35_older_version.tif  water_occurrence_utm35_v14.tif
deployment/: Dockerfile  Dockerfile_R  Dockerfile_python  Dockerfile_r  Makefile  config.yaml  environment.yaml
deployment/scripts/: console  render  setup  test
eopf_101.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
notebook_S1/: 01_Accessing_Data.ipynb  02_Data_Manipulation.ipynb  03_GRD_User_Case.ipynb  23_zarr_structure_S1GRD.ipynb  Sentinel-1_GRD_IW.ipynb  environment.yml  eopf_template.ipynb  testeS2.ipynb
notebook_S1/.ipynb_checkpoints/: 00_Understanding_Sentinel-1-checkpoint.ipynb  02_Data_Manipulation-checkpoint.ipynb  testeS2-checkpoint.ipynb
notebook_s1 copy/.ipynb_checkpoints/: 00_Understanding_Sentinel-1-checkpoint.ipynb
notebooks/: environment.yml
notebooks/00_Accessing_Data/: 00_Accessing_Data.ipynb
templates/: eopf_template.ipynb
(+7 files in other folders)
