[build-system]
requires = ["setuptools>=67.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "eopf-101"
version = "0.1.0"
description = "EOPF 101 - A toolkit for working with Sentinel data in Zarr format"
requires-python = ">=3.11,<3.14"
readme = "README.md"
authors = [
    { name = "Emmanuel Mathot", email = "emmanuel@developmentseed.com" },
    { name = "Gisela Romero Candanedo" },
    { name = "Julia Wagemann" },
    { name = "Ciaran Sweet", email = "ciaran@developmentseed.org" },
    { name = "Felix Delattre", email = "felix@developmentseed.org" },
]
license = "MIT"
keywords = [
    "EOPF",
    "Sentinel",
    "Zarr",
    "Earth Observation",
    "Remote Sensing",
    "Data Science",
    "Geospatial",
    "Python",
    "Jupyter",
    "Data Analysis",
]

dependencies = [
    "jupyter>=1.1.1",
    "zarr>=3.1.1",
    "pystac>=1.13.0",
    "pystac-client",
    "numpy>=2.3.1",
    "pandas>=2.0.2",
    "matplotlib>=3.10.3",
    "rioxarray>=0.14.1",
    "stackstac>=0.4.4",
    "xarray>=2024.5.0",
    "distributed>=2024.5.0",
    "dask>=2024.5.0",
    "ipykernel>=6.23.1",
    "llvmlite>=0.44.0",
    "requests",
    "aiohttp",
    "nbstripout",
    "pyproj>=3.4.1",
    "cartopy>=0.22.0",
    "scikit-image>=0.21.0",
    "shapely>=2.0.1",
    "quarto>=0.1.0",
    "s3fs",
    "sarsen",
    "xarray_sentinel",
    "earthpy",
    "dask[distributed]",
    "nbgitpuller>=1.2.2",
    "dask-labextension>=7.0.0",
    "jupyter-leaflet>=0.20.0",
    "jupyterlab-git>=0.51.2",
]

[tool.setuptools]
packages = ["deployment", "img"]

[tool.setuptools.package-data]
"*" = ["*.png", "*.jpg", "*.PNG", "*.webp"]

[project.urls]
Homepage = "https://eopf-toolkit.github.io/eopf-101/"
Source = "https://github.com/eopf-toolkit/eopf-101"
